<resources>
    <string name="app_name">LearningWords</string>
    <string name="title_home">Home</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="add_a_word">Add a word</string>
    <string name="title_training">Training</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_word">Adding word</string>
    <string name="title_change_word">Changing word</string>

    <!-- Settings strings -->
    <string name="change_theme_text">Change theme in settings</string>
    <string name="choose_level_title">Choose your English level</string>
    <string name="app_settings_title">App settings</string>
    <string name="user_setting_title">User settings</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_text">Open notifications settings</string>
    <string-array name="choose_theme_title">Choose theme</string-array>
    <string name="words_amount_dialog_message">Allowed from 5 to 30 words\n(Recommended: from 10 to 20)</string>
    <string name="words_amount_title">Amount of words</string>
    <string name="clear_dictionary_title">Clear dictionary</string>
    <string name="dialog_alert">Are you sure you want to clear dictionary?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="dictionary_cleared_text">The dictionary was cleared</string>

    <string name="input_number_error">Input a number</string>
    <string name="invalid_number_error">Invalid number was entered</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_user">User</string>

    <!-- Add word fragment -->
    <string name="add_word_title">Adding a word</string>
    <string name="original_word_text">Original word</string>
    <string name="translated_word_text">Translated word</string>
    <string name="add_word_text">Add the word</string>
    <string name="error_filled_in">Must be filled in</string>
    <string name="error_english_word">Must be english word</string>

    <!-- Dictionary Fragment -->
    <string name="word_changed_text">The word was updated</string>
    <string name="word_deleted_text">The word was deleted</string>

    <!-- Change word fragment -->
    <string name="changing_word_title">Changing a word</string>
    <string name="change_word_button_text">Change the word</string>

    <!-- Word item -->
    <string name="button_edit_text">Edit</string>
    <string name="button_delete_text">Delete</string>

    <!-- Home Fragment -->
    <string name="learn_new_words">Learn new words</string>
    <string name="not_set_info">Select your level in the settings to see the list of words.\n
        If you don\'t know your level, you can take the following tests:
    </string>

    <string name="not_set_resources">https://www.cambridgeenglish.org.ru/test-your-english/general-english/
        \n\n
        https://learnenglish.britishcouncil.org/online-english-level-test</string>

    <!-- Login -->
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="error_sign_up">The email address is badly formatted or password length less than 6</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="title_sign_up">OR</string>
    <string name="button_sign_up_email">Sign Up with email</string>
    <string name="button_sign_in_google">Sign in with Google</string>
    <string name="title_sign_up_email">Sign Up with email</string>
    <string name="button_sign_up_email2">Sign up</string>
    <string name="email_entered_as_text">You entered as:</string>
    <string name="button_verify_email">I verified the email</string>
    <string name="sign_out">Sign Out</string>
    <string name="button_sign_in_phone_main">Sign in with phone number</string>
    <string name="title_sign_in_phone">Sign in with phone</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_code">Code</string>
    <string name="button_verify_phone">Verify</string>
    <string name="button_resend">Resend</string>
    <string name="go_back_text">Go back</string>
    <string name="reset_password">Reset password</string>
    <string name="info_message_sent">The message to reset password was sent to</string>
    <string name="info_message_error">An error occurred</string>
    <string name="sign_in_error">Invalid email or password.</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_code">Invalid code</string>
    <string name="too_many_requests">Too Many Requests</string>
    <string name="resending_text">Resending...</string>
    <string name="sign_in_successful">Sign in successful</string>
    <string name="sign_in_unsuccessful">Sign in unsuccessful</string>
    <string name="code_sent_to">Code was sent to</string>
    <string name="enter_email_text">Enter an email</string>
    <string name="enter_password_text">Enter a password</string>
    <string name="message_sent_text">A confirmation message was sent to this email address</string>
    <string name="havent_verified_text">You haven\'t verified</string>

    <!-- Training Fragment -->
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="test_passed">You passed the test</string>
    <string name="text_not_passed">You didn\'t pass the test</string>
    <string name="correct_answers_percent">\"Percentage of correct answers: \"</string>
    <string name="try_again">Try again</string>
    <string name="go_home">Go home</string>
    <string name="training_not_set_info">Select your level in the settings</string>


</resources>