<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.learningwords.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.example.learningwords.ui.dictionary.DictionaryFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary" >
        <action
            android:id="@+id/action_navigation_dictionary_to_addWordFragment"
            app:destination="@id/addWordFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.learningwords.ui.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.learningwords.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/addWordFragment"
        android:name="com.example.learningwords.ui.dictionary.AddWordFragment"
        android:label="fragment_add_word"
        tools:layout="@layout/fragment_add_word" >
        <action
            android:id="@+id/action_addWordFragment_to_navigation_dictionary"
            app:destination="@id/navigation_dictionary" />
    </fragment>
</navigation>